--- a/src/index.css
+++ b/src/index.css
@@ -108,7 +108,7 @@
 .header-menu-not {
   margin-top: 150px;
   border: 1px solid #6acbdf;
-  width: 1110px;
+  width: 91.5%;
   height: 200px;
   position: fixed;
   z-index: 999;
@@ -128,4 +128,12 @@
   margin-top: 100px !important;
   color: red !important;
   font-style: "Open Sans";
+}
+
+.radio-sizes:hover {
+  border: 4px solid rgb(0, 132, 255) !important;
+}
+
+.radio-gender:hover {
+  border: 1px solid rgb(0, 132, 255) !important;
 }
