--- a/src/index.css
+++ b/src/index.css
@@ -1,7 +1,7 @@
 .ant-layout-header {
-  border-top: 28px solid #6acbdf;
+  /* border-top: 28px solid #6acbdf; */
   opacity: 1;
-  background: white;
+  background: transparent !important;
   padding: 0px 0px !important;
   height: 64px !important;
   padding: 0 50px;
@@ -93,7 +93,7 @@
 } */
 
 .header-menu {
-  margin-top: 150px;
+  margin-top: 120px;
   border: 1px solid #6acbdf;
   width: 1110px;
   height: 200px;
@@ -106,9 +106,9 @@
 }
 
 .header-menu-not {
-  margin-top: 150px;
+  margin-top: 120px;
   border: 1px solid #6acbdf;
-  width: 91.5%;
+  width: 87%;
   height: 200px;
   position: fixed;
   z-index: 999;
@@ -137,3 +137,26 @@
 .radio-gender:hover {
   border: 1px solid rgb(0, 132, 255) !important;
 }
+
+.upload-list-inline .ant-upload-list-item {
+  float: left;
+  width: 200px;
+  margin-right: 8px;
+}
+.upload-list-inline .ant-upload-animate-enter {
+  animation-name: uploadAnimateInlineIn;
+}
+.upload-list-inline .ant-upload-animate-leave {
+  animation-name: uploadAnimateInlineOut;
+}
+
+.case-file-dragger .ant-upload-list.ant-upload-list-picture{
+  display: none;
+}
+
+.ant-table-thead, th{
+  background: white !important; 
+  font-size: 13px;
+  font-weight: bold;
+  border-bottom: 2px solid #22568f !important
+} 
