--- a/src/index.css
+++ b/src/index.css
@@ -4,9 +4,17 @@
   background: transparent !important;
   padding: 0px 0px !important;
   height: 64px !important;
-  padding: 0 50px;
+  padding: 0px 0px;
   line-height: 64px;
-  margin: 0px 0px 100px 0px;
+  margin: 0px 400px 100px 0px !important;
+}
+
+.parallax-content {
+  margin-right: 405px !important;
+}
+
+.parallax-content-collapsed {
+  margin-right: 280px !important;
 }
 
 .ant-menu-horizontal > .ant-menu-item:hover,
@@ -150,13 +158,14 @@
   animation-name: uploadAnimateInlineOut;
 }
 
-.case-file-dragger .ant-upload-list.ant-upload-list-picture{
+.case-file-dragger .ant-upload-list.ant-upload-list-picture {
   display: none;
 }
 
-.ant-table-thead, th{
-  background: white !important; 
+.ant-table-thead,
+th {
+  background: white !important;
   font-size: 13px;
   font-weight: bold;
-  border-bottom: 2px solid #22568f !important
-} 
+  border-bottom: 2px solid #22568f !important;
+}
